stylesheet.css
html {
    background-color: rgba(122, 191, 191, 0.5);
}
body {
    background-color: #F2F2F2;
}
h1, h2, h3, h4 {
    text-transform: uppercase;
    font-family: 'Bebas Neue', Arial, sans-serif;
}
h1 {
    font-size: 40px;
    margin: 0 auto;
}
h2 {
    font-size:30px;
}
h3 {
    font-size: 25px;
    text-align: center;
    margin: 0 auto;
}
header {
    display: flex;
    box-shadow: 0px 5px 2px rgba(148, 148, 148, 0.5);
}
menu {
    overflow: hidden;
    max-height: 0;
    transition: max-height .2s ease-out;
}
header label {
    cursor: pointer;
    display: inline-block;
    padding: 28px 20px;
    position: relative;
    user-select: none;
}
p {
    font-family: 'Montserrat', Arial, sans-serif;
    padding: 10px;
    font-weight: medium;
    font-size: 16px;
    margin: 0 auto;
}
dd, li, nav, input {
    font-family: 'Montserrat', Arial, sans-serif;
}
menu {
    margin: 10px;
    padding-left: 20px;
}
menu li {
    padding-top: 5px;
    padding-bottom: 5px;
    list-style-type: square;
}
figure figcaption {
    font-size: 20px;
}
figure h3 {
    font-size: 25px;
    text-align: left;
}
aside {
    padding: 10px;
    background-color: #7ABFBF;
}
aside h2 {
    margin: 0 auto;
    text-align: center;
}
ol li {
    padding-top: 5px;
    padding-bottom: 5px;
}
/* Star Rating */
/*.star-rating {

}*/

@media screen and (min-width: 500px) {
    html {
        margin: 0 auto;
    }
    body {
        width: 414px;
        margin: 0 auto;
        display: grid;
        grid-template-columns: 1fr;
    }
    h1 {
        text-align: center;
    }

    /* 'Street tacos' heading and 4 nav actions and svgs */
    .streetTacosNav ul {
        padding-left: 0px;
        justify-content: space-evenly;
    }
    .streetTacosNav nav ul li a {
        text-decoration: none;
        color: #EB5428;
        font-size: 20px;
        display: flex;
        padding: 0px 10px;
    }
    .streetTacosNav nav ul li {
        list-style-type: none;
        text-align: center;
        text-transform: uppercase;
        font-family: 'Bebas Neue', Arial, sans-serif;
    }
    .streetTacosNav nav ul {
        display: flex;
    }

    /* Main Navigation */
    menu {
        padding: 0px;
    }
    menu#social li {
        font-size: 20px;
    }
    menu li {
        list-style-type: none;
        text-align: center;
        text-transform: uppercase;
        font-family: 'Bebas Neue', Arial, sans-serif;
    }
    menu li a {
        text-decoration: none;
        color: #EB5428;
        font-size: 20px;
        text-align: center;
    }

    /* Main Navigation */
    /*label {
        cursor: pointer;
        display: inline-block;
        padding: 28px 20px;
        position: relative;
        user-select: none;
        padding: 20px;
    }
    label span {
        background-color: #EB5428;
        display: block;
        height: 2px;
        position: relative;
        transition: background-color .2s ease-out;
        width: 18px;
    }
    label span:before, label span:after {
        background: #EB5428;
        content: '';
        display: block;
        height: 100%;
        position: absolute;
        transition: all .2s ease-out;
        width: 100%;
    }
    label span:before {
        top: 5px;
    }
    label span:after {
        top: -5px;
    }*/
    header input {
        display: none;
    }
    header input:checked ~ ul {
        max-height: 500px;
    }
    header input:checked ~ label span {
        background: transparent;
    }
    header input:checked ~ label span:before {
        transform: rotate(-45deg);
    }
    header input:checked ~ label span:after {
        transform: rotate(45deg);
    }
    header input:checked ~ label:not(.steps) span:before, input:checked ~ label:not(.steps) span:after {
        top: 0;
    }
    menu {
        overflow: visible;
        position: absolute;
        top: 0;
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    }
    header label span, header input {
        display: none;
    }
    /* Hamburger SVG */
    .menu-open-button {
        display: grid;
        grid-column: 1 / 1;
        padding: 20px;
        margin-right: 0px;
        overflow: hidden;
        float: left;
    }
    .menu-open-button svg {
        display: flex;
    }

    /* first list item and SVG */
    li#home-icon {
        display: block;
    }
    li svg.icon-tabler-tools-kitchen {
        margin-left: 40px;
        margin-right: 20px;
        z-index: 1;
        margin-top: 20px;
    }
    header menu li:first-child {
        background-color: #EB5428;
        display:grid;
        grid-template-columns: 2 / 2;
    }
    
    header menu li .icon-tabler-tools-kitchen:nth-child(1) {
        padding: 0px;
        display: grid;
        grid-column: 2 / 2;
        position: relative;
    }
    header menu li:nth-child(n+2) {
        text-align: center;
        grid-column: 1 / 1;
    }

    li#last {
        background-color: #EB5428;
        grid-column: 3 / 3;
    }
    svg.icon-tabler-user-circle {
        padding-left: 20px;
        padding-right: 20px;
    }
    li#last a {
        color: white;
        display: block;
    }
    body img {
        width: 100%;
    }
    body header menu h2 {
        display: none;
    }
    body header {
        background-color: white;
        padding: 5px;
        display: grid;
        grid-template-columns: 90px 160px 90px;
        order: -1;
    }

    /* Details */
    dl {
        padding: 10px;
        margin: 0 auto;
        display: grid;
        grid-template-columns: 100px 1fr;
    }
    dt {
        font-family: 'Montserrat', Arial, sans-serif;
        font-weight: bold;
    }
    dd {
        text-align: left;
        margin-left: 0px;
        padding: 0px;
        display: inline-flex;
    }

    /* Search Bar and SVG */
    section#search {
        padding-left: 40px;
        padding-right: 40px;
        padding-top: 40px;
        padding-bottom: 20px;
    }
    #search {
        display: flex;
        order: -1;
        flex: 1;
    }
    #search svg {
        background-color: #EB5428;
        padding: 0px 5px 1px 5px;
    }
    input {
        height: 35px;
        border: 2px solid #EB5428;
        flex: 1;
    }

    /* Side Dishes Styling */
    aside {
        padding: 0px;
        margin: 0px;
        display: flex;
        flex-direction: column;
    }
    aside figure {
        display: flex;
        margin: 10px;
    }
    aside figure img {
        order: -1;
        width: 100px;
        height: 100px;
    }
    aside figure h3 {
        margin: 0px;
    }
    aside figure figcaption {
        order: 2;
    }
    aside figure p {
        order: 3;
        margin: 0px;
        padding-top: 10px;
        padding-right: 0px;
        padding-left: 0px;
        padding-bottom: 0px;
    }
    aside figure span {
        order: 4;
        width: 100px;
    }
    aside figure h3, aside figure figcaption, aside figure p, aside figure span {
        display: flex;
    }

    /* Socials List*/
    ul#social {
        list-style-type: none;
        padding-left: 10px;
        padding-right: 10px;
        display: flex;
        align-self: center;
        justify-content: space-between;
        flex-grow: 1;
    }
    ul#social li {
        display: block;
        flex-direction: column;
        align-content: center;
    }
    ul#social li a {
        text-decoration: none;
        text-transform: uppercase;
        font-family: 'Bebas Neue', Arial, sans-serif;
        color: #EB5428;
        display: block;
        font-size: 20px;
    }
    footer {
        padding: 10px;
        background-color: white;
        text-align: center;
        font-size: 20px;
        font-family: 'Bebas Neue', Arial, sans-serif;
        line-height: .9em;
    }
    footer h3 {
        padding-top: 10px;
    }
    footer img {
        width: 200px;
        display: block;
        margin: 0 auto;
        padding-bottom: 20px;
    }
    footer > svg {
        display: none;
    }
}

@media screen and (min-width: 900px) {
    html {
        margin: 0 auto;
    }
    body {
        width: 800px;
        margin: 0 auto;
    }
}

@media screen and (min-width: 1400px) {
    body {
        width: 1400px;
        margin: 0 auto;
    }
}

